Feat: eslintrc, prettierrc.js 파일 추가 & tsconfig.json 충돌 해결 및 내용 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-<<<<<<< HEAD
-  "include": ["src", "src/models"]
-=======
-  "include": ["src", "./declaration.d.ts"]
->>>>>>> main
+  "include": ["src", "./declaration.d.ts", "src/models"]
 }
